[project]
name = "psmqtt"
authors = [
  { name="Eugene Schava", email="eschava.nospam@gmail.com" },
  { name="Francesco Montorsi", email="francesco.montorsi.nospam@gmail.com" },
]
description = "Utility reporting system health and status via MQTT"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/eschava/psmqtt"
"Bug Tracker" = "https://github.com/eschava/psmqtt/issues"

[project.scripts]
psmqtt = "psmqtt:main.main"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_psmqtt_version.py"
template = '''
version = "{version}"
'''

# disable guessing of next version, 
# see https://setuptools-scm.readthedocs.io/en/latest/extending/#setuptools_scmversion_scheme
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
